--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
-<doctype html>
-  <html>
-
+<!doctype html>
+<html>
   <head>
+    <meta charset="UTF-8">
     <title>Symptom Survey</title>
+    <style type="text/css">
+      html, body, #root {
+        height: 100%;
+        min-height: 100%;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
 
   <body>
     <div id="root"></div>
     <script src="index.jsx"></script>
   </body>
-
-  </html>
+</html>
